adding colors, js could use improvement (to allow 10+ items)

--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
                 <p>Piedurknes</p>
 
                 <label class="CheckboxDiv" for="Group1_0">
-                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.0" id="Group1_0" name="CheckboxGroup1"/>
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.0" data-images="16_H" id="Group1_0" name="CheckboxGroup1"/>
                     <p class="m-0">Garās</p>
                 </label>
 
                 <label class="CheckboxDiv" for="Group1_1">
-                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.1" id="Group1_1" name="CheckboxGroup1"/>
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.1" data-images="16_I" id="Group1_1" name="CheckboxGroup1"/>
                     <p class="m-0">Pusgarās</p>
                 </label>
 
                 <label class="CheckboxDiv" for="Group1_2">
-                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.2" id="Group1_2" name="CheckboxGroup1"/>
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.2" data-images="16_K" id="Group1_2" name="CheckboxGroup1"/>
                     <p class="m-0">Īsās</p>
                 </label>
             </div>
@@ -101,7 +101,7 @@
                 </label>
 
                 <label class="CheckboxDiv" for="Group4_1">
-                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.2.1" id="Group4_1" name="CheckboxGroup4"/>
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="1.2.1" data-images="17_K" id="Group4_1" name="CheckboxGroup4"/>
                     <p class="m-0">Ar atloku</p>
                 </label>
             </div>
@@ -151,12 +151,6 @@
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="2.1" data-images="20_JK" id="Group7_1" name="CheckboxGroup7"/>
                     <p class="m-0">Bez apkakles</p>
                 </label>
-
-                <label class="CheckboxDiv" for="Group7_2">
-                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="2.2" id="Group7_2" name="CheckboxGroup7"/>
-                    <p class="m-0">Ar izgriezumu</p>
-                </label>
-
             </div>
 
             <!--Subsection 8-->
@@ -165,12 +159,12 @@
 
                 <label class="CheckboxDiv" for="Group8_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="2.0.0" data-images="21_HI" id="Group8_0" name="CheckboxGroup8"/>
-                    <p class="m-0">Stāvkrādziņa</p>
+                    <p class="m-0">Klasiskā apkakle</p>
                 </label>
 
                 <label class="CheckboxDiv" for="Group8_1">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="2.0.1" data-images="21_FG" id="Group8_1" name="CheckboxGroup8"/>
-                    <p class="m-0">Klasiskā apkakle</p>
+                    <p class="m-0">Stāvkrādziņa</p>
                 </label>
             </div>
 
@@ -184,12 +178,12 @@
                 </label>
 
                 <label class="CheckboxDiv" for="Group9_1">
-                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="2.1.1" id="Group9_1" name="CheckboxGroup9"/>
-                    <p class="m-0">Mugurpusē vīle pa centru un poga augšpusē</p>
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="2.1.1" data-images="21_L" id="Group9_1" name="CheckboxGroup9"/>
+                    <p class="m-0">Ar izgriezumu un stepējumu</p>
                 </label>
             </div>
 
-            <!--Subsection 10-->
+            <!--Subsection 10
             <div class="FormSection FormSubsection FormGroup10 px-4 pb-3">
                 <p>Ar izgriezumu (kategorija)</p>
 
@@ -197,11 +191,11 @@
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="2.2.0" data-images="21_L" id="Group10_1" name="CheckboxGroup10"/>
                     <p class="m-0">Ar stepējumu</p>
                 </label>
-            </div>
+            </div>-->
 
             <!--Subsection 11-->
             <div class="FormSection FormSubsection FormGroup11 px-4 pb-3">
-                <p>Stāvkrādziņa (kategorija)</p>
+                <p>Klasiskā apkakle (kategorija)</p>
 
                 <label class="CheckboxDiv" for="Group11_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="2.0.0.0" data-images="22_FH" id="Group11_0" name="CheckboxGroup11"/>
@@ -216,7 +210,7 @@
 
             <!--Subsection 12-->
             <div class="FormSection FormSubsection FormGroup12 px-4 pb-3">
-                <p>Klasiskā apkakle (kategorija)</p>
+                <p>Stāvkrādziņa (kategorija)</p>
 
                 <label class="CheckboxDiv" for="Group12_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="2.0.1.0" data-images="22_FH" id="Group12_0" name="CheckboxGroup12"/>
@@ -246,6 +240,26 @@
                 </label>
             </div>
 
+            <!--Subsection 13.0-->
+            <div class="FormSection FormSubsection FormGroup130 px-4 pb-3">
+                <p>Taisna (kategorija)</p>
+
+                <label class="CheckboxDiv" for="Group130_0">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="3.0.0" id="Group130_0" name="CheckboxGroup130"/>
+                    <p class="m-0">Ar šķēlumu</p>
+                </label>
+            </div>
+
+            <!--Subsection 13.1-->
+            <div class="FormSection FormSubsection FormGroup131 px-4 pb-3">
+                <p>Izliekta (kategorija)</p>
+
+                <label class="CheckboxDiv" for="Group131_0">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="3.1.0" id="Group131_0" name="CheckboxGroup131"/>
+                    <p class="m-0">Ar šķēlumu</p>
+                </label>
+            </div>
+
 
 
             <!--MAIN section 14-->
@@ -258,7 +272,7 @@
                 </label>
 
                 <label class="CheckboxDiv" for="Group14_1">
-                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="4.1" id="Group14_1" name="CheckboxGroup14"/>
+                    <input onclick="InputLogic($(this));CheckExtra();" type="checkbox" data-checked="false" data-desc="4.1" id="Group14_1" name="CheckboxGroup14"/>
                     <p class="m-0">Ar kabatām</p>
                 </label>
             </div>
@@ -327,7 +341,7 @@
 
             <!--MAIN section 19-->
             <div class="FormSection FormGroup19 px-4 py-3">
-                <p>Izmēri</p>
+                <p>Izmērs</p>
 
                 <label class="CheckboxDiv" for="Group19_0">
                     <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="5.0" id="Group19_0" name="CheckboxGroup19"/>
@@ -472,27 +486,55 @@
 
 
             <!--MAIN section 23-->
-            <div class="FormSection FormGroup23 px-4 py-3">
+            <div class="FormSection FormGroup24 px-4 py-3">
                 <p>Krāsa</p>
 
-                <input type="checkbox" name="group8[]"/>
-                <label>
-                    <div class="ColorCheckboxDiv1">&nbsp;</div>
+                <label style="background-image: url('colors/asfalta_peleks.jpg')" class="CheckboxDiv ColorCheckboxDiv" for="Group24_0">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="7.0.0" id="Group24_0" name="CheckboxGroup24"/>
                 </label>
 
-                <input type="checkbox" name="group8[]"/>
-                <label>
-                    <div class="ColorCheckboxDiv2">&nbsp; </div>
+                <label style="background-image: url('colors/debesu_zils_pastelis.jpg')" class="CheckboxDiv ColorCheckboxDiv" for="Group24_1">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="7.0.1" id="Group24_1" name="CheckboxGroup24"/>
                 </label>
 
-                <input type="checkbox" id="26" name="group8[]"/>
-                <label>
-                    <div class="ColorCheckboxDiv3">&nbsp;</div>
+                <label style="background-image: url('colors/dumakaini_meza_zals.jpg')" class="CheckboxDiv ColorCheckboxDiv" for="Group24_2">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="7.0.2" id="Group24_2" name="CheckboxGroup24"/>
                 </label>
 
-                <input type="checkbox" name="group8[]"/>
-                <label>
-                    <div class="ColorCheckboxDiv4">&nbsp;</div>
+                <label style="background-image: url('colors/gaisi_peleks.jpg')" class="CheckboxDiv ColorCheckboxDiv" for="Group24_3">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="7.0.3" id="Group24_3" name="CheckboxGroup24"/>
+                </label>
+
+                <label style="background-image: url('colors/juras_zili_zals.jpg')" class="CheckboxDiv ColorCheckboxDiv" for="Group24_4">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="7.0.4" id="Group24_4" name="CheckboxGroup24"/>
+                </label>
+
+                <label style="background-image: url('colors/kosi_juras_zili_zals.jpg')" class="CheckboxDiv ColorCheckboxDiv" for="Group24_5">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="7.0.5" id="Group24_5" name="CheckboxGroup24"/>
+                </label>
+
+                <label style="background-image: url('colors/kosi_meza_zals.jpg')" class="CheckboxDiv ColorCheckboxDiv" for="Group24_6">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="7.0.6" id="Group24_6" name="CheckboxGroup24"/>
+                </label>
+
+                <label style="background-image: url('colors/kosi_sniega_balts.jpg')" class="CheckboxDiv ColorCheckboxDiv" for="Group24_7">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="7.0.7" id="Group24_7" name="CheckboxGroup24"/>
+                </label>
+
+                <label style="background-image: url('colors/melanza_dzinsa_zils.jpg')" class="CheckboxDiv ColorCheckboxDiv" for="Group24_8">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="7.0.8" id="Group24_8" name="CheckboxGroup24"/>
+                </label>
+
+                <label style="background-image: url('colors/melanza_juras_zals.jpg')" class="CheckboxDiv ColorCheckboxDiv" for="Group24_9">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="7.0.9" id="Group24_9" name="CheckboxGroup24"/>
+                </label>
+
+                <label style="background-image: url('colors/pastelu_juras_zili_zals.jpg')" class="CheckboxDiv ColorCheckboxDiv" for="Group24_10">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="7.1.0" id="Group24_10" name="CheckboxGroup24"/>
+                </label>
+
+                <label style="background-image: url('colors/zili_bruni_peleks.jpg')" class="CheckboxDiv ColorCheckboxDiv" for="Group24_11">
+                    <input onclick="InputLogic($(this))" type="checkbox" data-checked="false" data-desc="7.1.1" id="Group24_11" name="CheckboxGroup24"/>
                 </label>
             </div>
 
@@ -521,6 +563,9 @@
                     <img class="OverlayImage BaseImage" src="images/F_STANDART.png" alt="">
                     <img class="OverlayImage 14_H" src="images/14_H_F.png" alt="">
                     <img class="OverlayImage 14_I" src="images/14_I_F.png" alt="">
+                    <img class="OverlayImage 16_H" src="images/16_H_F.png" alt="">
+                    <img class="OverlayImage 16_I" src="images/16_I_F.png" alt="">
+                    <img class="OverlayImage 16_K" src="images/16_K_F.png" alt="">
                     <img class="OverlayImage 17_FG" src="images/17_FG_F.png" alt="">
                     <img class="OverlayImage 17_H" src="images/17_H_F.png" alt="">
                     <img class="OverlayImage 17_I" src="images/17_I_F.png" alt="">
@@ -546,9 +591,13 @@
                     <img class="OverlayImage BaseImage" src="images/B_STANDART.png" alt="">
                     <img class="OverlayImage 14_H" src="images/14_H_B.png" alt="">
                     <img class="OverlayImage 14_I" src="images/14_I_B.png" alt="">
+                    <img class="OverlayImage 16_H" src="images/16_H_B.png" alt="">
+                    <img class="OverlayImage 16_I" src="images/16_I_B.png" alt="">
+                    <img class="OverlayImage 16_K" src="images/16_K_B.png" alt="">
                     <img class="OverlayImage 17_FG" src="images/17_FG_B.png" alt="">
                     <img class="OverlayImage 17_H" src="images/17_H_B.png" alt="">
                     <img class="OverlayImage 17_I" src="images/17_I_B.png" alt="">
+                    <img class="OverlayImage 17_K" src="images/17_K_B.png" alt="">
                     <img class="OverlayImage 17_J" src="images/17_J_B.png" alt="">
                     <img class="OverlayImage 18_F" src="images/18_F_B.png" alt="">
                     <img class="OverlayImage 18_G" src="images/18_G_B.png" alt="">
@@ -560,6 +609,9 @@
                     <img class="OverlayImage 21_L" src="images/21_L_B.png" alt="">
                     <img class="OverlayImage 24_I" src="images/24_I_B.png" alt="">
                     <img class="OverlayImage 24_J" src="images/24_J_B.png" alt="">
+                </div>
+                <div class="ColorOverlayDiv">
+                    <img class="ColorOverlay" src="colors/all_colors.jpg" alt="">
                 </div>
             </div>
         </div>
